--- a/cards/index.html
+++ b/cards/index.html
@@ -1,1 +1,33 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="./design/style.css">
+  <title>Frontend Mentor | Blog preview card</title>
+</head>
+<body>
+  <div class="main">
+    <div class="sub1">
+      <img src="./assets/images/illustration-article.svg" alt="Majry">
+    </div>
+    <div class="sub2">
+     <button type="button"> <a href="">Learning</a></button> 
+    </div>
+    <div class="sub3">
+       Published 21 Dec 2023
+    </div>
+    <div class="sub4">
+      <h2>HTML & CSS foundations </h2>
+   </div>
+    <div class="sub5"> 
+     <p> These languages are the backbone of every website, defining structure, content, and presentation.    </p> 
+    </div>
+        <div class="sub6"> 
+          <img src="./assets/images/image-avatar.webp" alt="favicon "> 
+          <h5>Greg Hooper</h5>
+        </div>
+  </div>
+</body>
+</html>
